--- a/index.html
+++ b/index.html
@@ -3,9 +3,94 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>freeCodeCamp Survey Form</title>
+    <title>freeCodeCamp Original Trombones</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
   </head>
   <body>
+    <header id="header">
+      <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" alt="Logo">
+      <nav id="nav-bar">
+        <ul>
+          <li class="nav-link"><a href="#features">Features</a></li>
+          <li class="nav-link"><a href="#how_it_works">How It Works</a></li>
+          <li class="nav-link"><a href="#pricing">Pricing</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main id="main">
+      <section id="hero">
+        <h2>Handcrafted, home-made masterpieces</h2>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <input type="email" id="email" placeholder="Enter your email address" required>
+          <button id="submit"> Get started</button>
+        </form>
+      </section>
+      <section id="features">
+        <div class="premium_materials">
+          <div class="fa fa-3x fa-fire"></div>
+          <h2>Premium Materials</h2>
+          <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+        </div>
+        <div class="fast_shipping">
+          <div class="fa fa-3x fa-truck"></div>
+          <h2>Fast Shipping</h2>
+          <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
+        </div>
+        <div class="quality_assurance">
+          <div class="fa fa-3x fa-battery-full"></div>
+          <h2>Quality Assurance</h2>
+          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+        </div>
+      </section>
+      <section id="how_it_works">
+        <iframe 
+          width="560" 
+          height="315" 
+          src="https://www.youtube.com/embed/y8Yv4pnO7qc" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen>
+        </iframe>
+      </section>
+      <section id="pricing">
+        <div class="tenor_trombone">
+          <h2>Tenor trombone</h2>
+          <h3>$600</h3>
+          <p>Lorem ipsum.</p>
+          <p>Lorem ipsum.</p>
+          <p>Lorem ipsum dolor.</p>
+          <p>Lorem ipsum.</p>
+          <button>select</button>
+        </div>
+        <div class="bass_trombone">
+          <h2>Bass trombone</h2>
+          <h3>$900</h3>
+          <p>Lorem ipsum.</p>
+          <p>Lorem ipsum.</p>
+          <p>Lorem ipsum dolor.</p>
+          <p>Lorem ipsum.</p>
+          <button>select</button>
+        </div>
+        <div class="valve_trombone">
+          <h2>Valve trombone</h2>
+          <h3>$1200</h3>
+          <p>Lorem ipsum.</p>
+          <p>Lorem ipsum.</p>
+          <p>Lorem ipsum dolor.</p>
+          <p>Lorem ipsum.</p>
+          <button>select</button>
+        </div>
+      </section>
+    </main>
+    <footer id="footer">
+      <ul>
+        <li><a href="*">Privacy</a></li>
+        <li><a href="*">Terms</a></li>
+        <li><a href="*">Contact</a></li>
+      </ul>
+      <p>Copyright 2016, Original Trombones</p>
+    </footer>
   </body>
 </html>
